[package]
name = "cometd"
description = "Cometd implementation in Rust"
license = "MIT"
repository = "https://github.com/Aeradriel/cometd-rs.git"
version = "0.1.2"
authors = ["Thibaut Roche <thibaut.roche.perso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies", "json"]}
serde = "1.0.149"
serde_json = "1.0.89"
serde_derive = "1.0.149"
log = "0.4.17"

[dev-dependencies]
mockito = "0.22.0"
